# rag-contradiction-detect

./: add_sentences_to_triplets.py  embeddings.py  graph.py  main.py  matches.py  metadata.json  preprocess.py  pyproject.toml  relation_extractor.py  test.py  triplets.json
my_db/__manifest/_transactions/: 0-02eb3e20-0fd9-4449-874d-3811c4380401.txn  0-dd040292-53f4-4161-8176-de99478a8137.txn
my_db/my_vectors.lance/_transactions/: 0-04bdbb0a-04bb-47d2-9e60-76b08b92acb6.txn  0-f477e636-22a9-432f-aef2-95e8103b6638.txn
