[project]
name = "rag-cont-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "lancedb>=0.34.0",
    "nltk>=3.10.0",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "transformers>=5.13.0",
]
